[gd_scene load_steps=7 format=3 uid="uid://8wvi0b44r3c3"]

[ext_resource type="Script" path="res://IteractItems/interact_item.gd" id="1_2grlj"]
[ext_resource type="Shader" path="res://IteractItems/interact_item.gdshader" id="2_mdc73"]
[ext_resource type="Texture2D" uid="uid://i600oxj8pkl8" path="res://assets/TopDownHouse_FurnitureState1.png" id="3_1lwm6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0nkor"]
shader = ExtResource("2_mdc73")
shader_parameter/line_color = Quaternion(1, 1, 1, 1)
shader_parameter/line_thickness = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lntb"]
size = Vector2(13, 8.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvast"]
size = Vector2(16, 18)

[node name="InteractItem" type="RigidBody2D"]
mass = 0.01
gravity_scale = 0.0
script = ExtResource("1_2grlj")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0nkor")
position = Vector2(0, -3)
texture = ExtResource("3_1lwm6")
region_enabled = true
region_rect = Rect2(193.592, 15.9456, 13.2428, 16.3508)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.25)
shape = SubResource("RectangleShape2D_2lntb")

[node name="is_colliding" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="is_colliding"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_rvast")

[connection signal="body_entered" from="is_colliding" to="." method="_on_is_colliding_body_entered"]
[connection signal="body_exited" from="is_colliding" to="." method="_on_is_colliding_body_exited"]
